# todolist

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
tasks/: admin.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_todoitem_todolist_alter_todolist_user.py
tasks/models/: __init__.py  todoitem.py  todolist.py
tasks/tests/: test_todolist_endpoint.py  test_todolist_endpoints.py
todolist/: settings.py  urls.py
todolist/settings/: base.py  development.py
users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py
users/tests/: test_registration_serializer.py  test_user_model.py  test_users_login_api_endpoint.py  test_users_register_api_endpoint.py
